create new DTO class's for product input and output
