# modules/RestBuilder/RestBuilder-impl/src/main/java/restbuilder/internal/resource/v1_0/ProductOutputResourceImpl.java
@@ -12,9 +12,9 @@ import org.osgi.service.component.annotations.Component;
 import org.osgi.service.component.annotations.Reference;
 import org.osgi.service.component.annotations.ServiceScope;
 
-import restbuilder.dto.v1_0.Product;
+import restbuilder.dto.v1_0.ProductOutput;
 import restbuilder.resource.v1_0.CategoryResource;
-import restbuilder.resource.v1_0.ProductResource;
+import restbuilder.resource.v1_0.ProductOutputResource;
 import restbuilder.resource.v1_0.TypeResource;
 
 import javax.validation.constraints.NotNull;
@@ -27,10 +27,11 @@ import java.util.List;
  * @author Wesley Roberts
  */
 @Component(
-	properties = "OSGI-INF/liferay/rest/v1_0/product.properties",
-	scope = ServiceScope.PROTOTYPE, service = ProductResource.class
+	properties = "OSGI-INF/liferay/rest/v1_0/product-output.properties",
+	scope = ServiceScope.PROTOTYPE, service = ProductOutputResource.class
 )
-public class ProductResourceImpl extends BaseProductResourceImpl {
+public class ProductOutputResourceImpl extends BaseProductOutputResourceImpl {
+
 	/**
 	 * Invoke this method with the command line:
 	 *
@@ -40,13 +41,13 @@ public class ProductResourceImpl extends BaseProductResourceImpl {
 	@Override
 	@Path("/product/all")
 	@Produces({"application/json", "application/xml"})
-	@Tags(value = {@Tag(name = "Product")})
-	public Page<Product> getAllProducts() throws Exception {
-		List<Product> productListDTO = new ArrayList<Product>();
-		for (SaleProduct e: _saleProductService.getAllSaleProducts()){
-			productListDTO.add(_toProductDTO(e));
+	@Tags(value = {@Tag(name = "ProductOutput")})
+	public Page<ProductOutput> getAllProducts() throws Exception {
+		List<ProductOutput> productOutputList = new ArrayList<ProductOutput>();
+		for (SaleProduct saleProduct:_saleProductService.getAllSaleProducts()) {
+			productOutputList.add(_toProductOutput(saleProduct));
 		}
-		return Page.of(productListDTO);
+		return Page.of(productOutputList);
 	}
 
 	/**
@@ -59,35 +60,12 @@ public class ProductResourceImpl extends BaseProductResourceImpl {
 	@Parameters(value = {@Parameter(in = ParameterIn.PATH, name = "productId")})
 	@Path("/product/{productId}")
 	@Produces({"application/json", "application/xml"})
-	@Tags(value = {@Tag(name = "Product")})
-	public Product getProductById(
+	@Tags(value = {@Tag(name = "ProductOutput")})
+	public ProductOutput getProductById(
 			@NotNull @Parameter(hidden = true) @PathParam("productId") Integer
 					productId)
 			throws Exception {
-
-		return _toProductDTO( _saleProductService.getSaleProductById(productId));
-	}
-
-	/**
-	 * Invoke this method with the command line:
-	 *
-	 * curl -X 'POST' 'http://localhost:8080/o/RestBuilder/v1.0/product/create' -d $'{"category": ___, "id": ___, "name": ___, "price": ___, "type": ___}' --header 'Content-Type: application/json' -u 'test@liferay.com:test'
-	 */
-	@Consumes({"application/json", "application/xml"})
-	@Override
-	@Path("/product/create")
-	@POST
-	@Produces({"application/json", "application/xml"})
-	@Tags(value = {@Tag(name = "Product")})
-	public Product creatProduct(Product product) throws Exception {
-		_saleProductService.createProduct(
-				product.getName(),
-				product.getPrice(),
-				product.getId(),
-				product.getCategory().getId(),
-				product.getType().getId()
-		);
-		return product;
+		return _toProductOutput(_saleProductService.getSaleProductById(productId));
 	}
 
 	/**
@@ -100,7 +78,7 @@ public class ProductResourceImpl extends BaseProductResourceImpl {
 	@Parameters(value = {@Parameter(in = ParameterIn.PATH, name = "productId")})
 	@Path("/product/delete/{productId}")
 	@Produces({"application/json", "application/xml"})
-	@Tags(value = {@Tag(name = "Product")})
+	@Tags(value = {@Tag(name = "ProductOutput")})
 	public void deleteProductById(
 			@NotNull @Parameter(hidden = true) @PathParam("productId") Integer
 					productId)
@@ -108,8 +86,8 @@ public class ProductResourceImpl extends BaseProductResourceImpl {
 		_saleProductService.deleteById(productId);
 	}
 
-	private Product _toProductDTO(SaleProduct saleProduct){
-		return new Product(){
+	private ProductOutput _toProductOutput(SaleProduct saleProduct){
+		return new ProductOutput(){
 			{
 				try {
 					category = _categoryResource.getCategoryById((int) saleProduct.getCategoryId());
@@ -129,10 +107,9 @@ public class ProductResourceImpl extends BaseProductResourceImpl {
 	}
 
 	@Reference
-	SaleProductService _saleProductService;
+	TypeResource _typeResource;
 	@Reference
 	CategoryResource _categoryResource;
 	@Reference
-	TypeResource _typeResource;
-
+	SaleProductService _saleProductService;
 }
